<resources>
    <string name="app_name">Registration</string>
    <string name="sign_in" translatable="false">Sign In</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="name" translatable="false">Name</string>
    <string name="surname" translatable="false">Surname</string>
    <string name="patronymic" translatable="false">Patronymic</string>
    <string name="done" translatable="false">Done</string>
</resources>